--- a/client23.css
+++ b/client23.css
@@ -15,6 +15,115 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  --primary-color : #FFFFFF;
+  --secondary : #FFD700;
+  background-color: var(--primary-color);
+}
+
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+@media(max-width:900){
+
+}
+.logo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text, .h1{font-size: 11px}
+}
+/* Arrow css */
+.mySlides{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ///////////..utility classes../////////// */
@@ -34,7 +143,12 @@ body {
   outline: none;
   margin-top: 1em;
   text-transform: uppercase;
-  font-weight: small;
+  font-weight: small
+
+
+}
+.food-price{
+  text-color: #FFD700;
 }
 
 .btn-primary {
@@ -66,7 +180,6 @@ body {
   height: 50px;
   z-index: 12;
 }
-
 .navbar-container {
   display: flex;
   justify-content: space-between;
@@ -222,6 +335,15 @@ body {
   max-height: 300px;
   object-fit: cover;
   object-position: center;
+}
+/* add to cart button */
+.addToCart{
+  background-color: #FFD700;
+  color: WHITE;
+  border: none;
+  border-radius: 200px;
+  font-size: 20px;
+  align-content: center;
 }
 
 .img-container {
